refactor(dto): 移除多余的setter方法并优化数据传输对象
移除了ImageRequest、AuthUserProfileDTO和BAHDataResponseDTO中的
冗余setter方法，简化了数据传输对象的结构，提高了代码的简洁性。

同时更新了Patient实体类，移除了getter/setter方法并添加了必要的
注解，使代码更加符合现代Java开发规范。

feat(monitoring): 使用Lombok优化压力测试相关类

为PressureTestReport和PressureTestRequest类添加了Lombok的
@Setter注解，移除了手动编写的getter/setter方法，减少了
样板代码，提高了代码可读性和维护性。

perf(monitoring): 优化压力测试服务中的集合操作

将latencies列表的操作从传统的get(index)方式改为新的
getFirst()和getLast()方法，提升了性能并使代码更清晰。

refactor(.gitignore): 更新忽略文件配置

在后端和前端项目的.gitignore文件中添加了
export_to_markdown.py和folder_summary.md文件，
避免这些临时文件被提交到版本控制系统中。